@@ -675,6 +675,7 @@ static const char *const stop_xpm[] = {
 "     .KLLLLLLLK.      ",
 "      .........       ",
 "                      "};
+
 /* XPM */
 static const char *const bm_xpm[] = {
 "22 22 86 1",
@@ -786,6 +787,57 @@ static const char *const bm_xpm[] = {
 "   .......OP.QR....   ",
 "         .S. TU.      ",
 "          .   .       "};
+
+/* XPM */
+static const char *const tools_xpm[] = {
+"22 22 25 1",
+"       c #None",
+".      c #696977777676",
+"X      c #96969B9B9B9B",
+"o      c #848490908F8F",
+"O      c #D7D7D7D7D7D7",
+"+      c #B5B5B7B7B7B7",
+"@      c #EAEAEAEAEAEA",
+"#      c #797987878787",
+"$      c #F1F1EFEFEFEF",
+"%      c #CCCCCCCCCCCC",
+"&      c #8B8B97979696",
+"*      c #CACACACACACA",
+"=      c #787878787878",
+"-      c #AAAAB5B5B5B5",
+";      c #F9F9F8F8F9F9",
+":      c #A6A6A8A8A8A8",
+">      c #7F7F90907F7F",
+",      c #A4A4BDBDA4A4",
+"<      c #A5A58A8A5353",
+"1      c #00008B8B0000",
+"2      c #6C6C6C6C6C6C",
+"3      c #BCBCC3C3C2C2",
+"4      c #CACAD8D8D8D8",
+"5      c #9999A8A8A8A8",
+"6      c #848489898989",
+"                      ",
+"                      ",
+"        .XXo.         ",
+"        oO $$+.       ",
+"        oo@$$$@#      ",
+"         #o@$$$O#     ",
+"          #X$$$$%X    ",
+"  &#%      #X$$$@o    ",
+"  #*o      =-@$$$#    ",
+"  oO*o    #$@$$$$#    ",
+"  oOOOX  oO@;$$$$X    ",
+"  #@O*OXo:>,<$$$$o    ",
+"  XO@O*O*12>,<$$$#    ",
+"   X$@O*+<12>,<$$&    ",
+"    +$@O*+<12>,<;@    ",
+"     :$@O*+<12>,<$@   ",
+"      &34O*-<11>,<$$  ",
+"        -X&X&<12>,<$O ",
+"            45<11>,<3 ",
+"             45<1=>O# ",
+"              -&X6&=# ",
+"                      "};
 
 /* Small icons here */
 
@@ -1319,6 +1371,73 @@ static const char *const bm_s_xpm[] = {
 " ......nopqr... ",
 "      .qs.tu.   ",
 "      .v. wx.   "};
+
+/* XPM */
+static const char *const tools_s_xpm[] = {
+"16 16 45 1",
+"  c #7B127D1C7D08",
+". c #82778EED8E15",
+"X c #8F3F975396FF",
+"o c #9A98A40CA38F",
+"O c #833D8EC28E02",
+"+ c #99C89EDF9EC2",
+"@ c #B347BD91BD42",
+"# c #7E4181A081AF",
+"$ c #8744915990DA",
+"% c #86728A968A7C",
+"& c #8D56924B9226",
+"* c #96DF9AC79AA6",
+"= c #9E01A473A438",
+"- c #AB41B55EB546",
+"; c #ABD1B155B117",
+": c #B5BFBC3DBC2F",
+"> c #B917BCECBCAB",
+", c #B558B98BB958",
+"< c #CEA2CFDBCFD4",
+"1 c #A699AC55ABF1",
+"2 c #C2A5C5A8C57A",
+"3 c #C8B2CA27CA1C",
+"4 c #D80FD952D955",
+"5 c #DF19E120E134",
+"6 c #EAC7E9ECE9FE",
+"7 c #F164EF95EF9D",
+"8 c #F6E0F5E6F61C",
+"9 c #F013EEAEEEBF",
+"0 c #487651675130",
+"q c #6E4D7BA97B06",
+"w c #88F190679051",
+"e c #92339C0E9BC1",
+"r c #A1BBAB0FAA98",
+"t c #A24AA7C4A7A7",
+"y c #86C7935E92DC",
+"u c #C8C4D721D725",
+"i c #D0E6D516D518",
+"p c #76A38450834A",
+"a c #6B4B7B507A6D",
+"s c #7C6D882B878D",
+"d c #88F395099487",
+"f c #DB34DCE9DCF5",
+"g c #5B05673F66CD",
+"h c #9402A0549FCC",
+"  c None",
+/* pixels */
+"                ",
+"     gO+Oq      ",
+"     p*45<Xg    ",
+"     h.>885oa   ",
+"      p.3883Xg  ",
+" i$O   s$488;s  ",
+" O>1p  e;588;a  ",
+" O331sr;7778:s  ",
+" O343,**3678;a  ",
+" f,643;#%368:s  ",
+"  t<64>= &374f  ",
+"   t244>= &379ih",
+"    d@:;=& &475u",
+"      ssr-* *44r",
+"         u-%#*%0",
+"          feww0g"
+};
 
 /* XPM */
 static const char *const new_s_xpm[] = {
